k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: task-distribute
  namespace: test
  labels:
    name: task-distribute
    version: v1.0
spec:
  replicas: 1
  selector:
    matchLabels:
      name: task-distribute
      version: v1.0
  template:
    metadata:
      labels:
        name: task-distribute
        version: v1.0
    spec:
      containers:
      - name: task-distribute
        image: mh.com:8890/test/task-distribute:v1.0
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: task-distribute
  namespace: test
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    name: task-distribute
    version: v1.0
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-distribute-ing
  namespace: test
spec:
  ingressClassName: kong
  rules:
    - host: task.inmove.top
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: task-distribute
                port:
                  number: 8000
            path: /
